@@ -121,6 +121,17 @@ sub create_version_macros {
 			my @modversion = split /\./, $data{modversion};
 			$modversion[2] = 0 unless defined $modversion[2];
 
+			# If a version part contains non-numeric characters,
+			# see if it at least starts with numbers and use those.
+			# This is needed for versions like '2.0b2'.
+			# foreach ( @modversion ) {
+			# 	if (/\D/ && /^(\d+)/) {
+			# 		$_ = $1;
+			# 	}
+			# }
+			@modversion =
+				map { /\D/ && /^(\d+)/ ? $1 : $_ } @modversion;
+
 			return <<__EOD__;
 #define $stem\_MAJOR_VERSION ($modversion[0])
 #define $stem\_MINOR_VERSION ($modversion[1])
@@ -133,7 +144,7 @@ __EOD__
 		}
 	}
 
-	return;
+	return undef;
 }
 
 sub write_version_macros {
